// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleContainer should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScheduleContainer
    schedule={
        Array [
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 3,
              "name": "Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 4,
              "name": "Not Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        Array [
          <Schedule
            admin={undefined}
            deleteFromSchedule={undefined}
            editSchedule={undefined}
            event={
                        Object {
                                    "ass_bar_manager": true,
                                    "bar_manager": true,
                                    "barbacks": 1,
                                    "bartenders": 1,
                                    "date": "Jul 20, 2018",
                                    "event_id": 3,
                                    "name": "Billy Prince Billy",
                                    "staff": Array [
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Bar Manager",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Assistant Bar Manager",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Bartender",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Barback",
                                        "staff_id": null,
                                      },
                                    ],
                                  }
            }
            staff={undefined}
/>,
          <Schedule
            admin={undefined}
            deleteFromSchedule={undefined}
            editSchedule={undefined}
            event={
                        Object {
                                    "ass_bar_manager": true,
                                    "bar_manager": true,
                                    "barbacks": 1,
                                    "bartenders": 1,
                                    "date": "Jul 20, 2018",
                                    "event_id": 4,
                                    "name": "Not Billy Prince Billy",
                                    "staff": Array [
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Bar Manager",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Assistant Bar Manager",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Bartender",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Barback",
                                        "staff_id": null,
                                      },
                                    ],
                                  }
            }
            staff={undefined}
/>,
        ],
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "class",
        "props": Object {
          "admin": undefined,
          "deleteFromSchedule": undefined,
          "editSchedule": undefined,
          "event": Object {
            "ass_bar_manager": true,
            "bar_manager": true,
            "barbacks": 1,
            "bartenders": 1,
            "date": "Jul 20, 2018",
            "event_id": 3,
            "name": "Billy Prince Billy",
            "staff": Array [
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Bar Manager",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Assistant Bar Manager",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Bartender",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Barback",
                "staff_id": null,
              },
            ],
          },
          "staff": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "class",
        "props": Object {
          "admin": undefined,
          "deleteFromSchedule": undefined,
          "editSchedule": undefined,
          "event": Object {
            "ass_bar_manager": true,
            "bar_manager": true,
            "barbacks": 1,
            "bartenders": 1,
            "date": "Jul 20, 2018",
            "event_id": 4,
            "name": "Not Billy Prince Billy",
            "staff": Array [
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Bar Manager",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Assistant Bar Manager",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Bartender",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Barback",
                "staff_id": null,
              },
            ],
          },
          "staff": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          Array [
            <Schedule
              admin={undefined}
              deleteFromSchedule={undefined}
              editSchedule={undefined}
              event={
                            Object {
                                          "ass_bar_manager": true,
                                          "bar_manager": true,
                                          "barbacks": 1,
                                          "bartenders": 1,
                                          "date": "Jul 20, 2018",
                                          "event_id": 3,
                                          "name": "Billy Prince Billy",
                                          "staff": Array [
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Bar Manager",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Assistant Bar Manager",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Bartender",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Barback",
                                              "staff_id": null,
                                            },
                                          ],
                                        }
              }
              staff={undefined}
/>,
            <Schedule
              admin={undefined}
              deleteFromSchedule={undefined}
              editSchedule={undefined}
              event={
                            Object {
                                          "ass_bar_manager": true,
                                          "bar_manager": true,
                                          "barbacks": 1,
                                          "bartenders": 1,
                                          "date": "Jul 20, 2018",
                                          "event_id": 4,
                                          "name": "Not Billy Prince Billy",
                                          "staff": Array [
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Bar Manager",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Assistant Bar Manager",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Bartender",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Barback",
                                              "staff_id": null,
                                            },
                                          ],
                                        }
              }
              staff={undefined}
/>,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "class",
          "props": Object {
            "admin": undefined,
            "deleteFromSchedule": undefined,
            "editSchedule": undefined,
            "event": Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 3,
              "name": "Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
            "staff": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "class",
          "props": Object {
            "admin": undefined,
            "deleteFromSchedule": undefined,
            "editSchedule": undefined,
            "event": Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 4,
              "name": "Not Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
            "staff": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ScheduleContainer should match the snapshot when there are no unscheduled events 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ScheduleContainer
    schedule={
        Array [
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 3,
              "name": "Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 4,
              "name": "Not Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
          ]
    }
    type="Unscheduled Events"
    unscheduledEvents={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <h4>
                    There are no unscheduledEvents
          </h4>
          <h4>
                    Would you like to fill all unscheduled events?
          </h4>
          <button
                    className="generate-schedule-btn"
                    onClick={undefined}
          >
                    Generate schedule
          </button>
</div>,
        Array [
          <Schedule
            admin={undefined}
            deleteFromSchedule={undefined}
            editSchedule={undefined}
            event={
                        Object {
                                    "ass_bar_manager": true,
                                    "bar_manager": true,
                                    "barbacks": 1,
                                    "bartenders": 1,
                                    "date": "Jul 20, 2018",
                                    "event_id": 3,
                                    "name": "Billy Prince Billy",
                                    "staff": Array [
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Bar Manager",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Assistant Bar Manager",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Bartender",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Barback",
                                        "staff_id": null,
                                      },
                                    ],
                                  }
            }
            staff={undefined}
/>,
          <Schedule
            admin={undefined}
            deleteFromSchedule={undefined}
            editSchedule={undefined}
            event={
                        Object {
                                    "ass_bar_manager": true,
                                    "bar_manager": true,
                                    "barbacks": 1,
                                    "bartenders": 1,
                                    "date": "Jul 20, 2018",
                                    "event_id": 4,
                                    "name": "Not Billy Prince Billy",
                                    "staff": Array [
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Bar Manager",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Assistant Bar Manager",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Bartender",
                                        "staff_id": null,
                                      },
                                      Object {
                                        "event_id": 3,
                                        "name": "Staff Needed",
                                        "role": "Barback",
                                        "staff_id": null,
                                      },
                                    ],
                                  }
            }
            staff={undefined}
/>,
        ],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h4>
              There are no unscheduledEvents
</h4>,
            <h4>
              Would you like to fill all unscheduled events?
</h4>,
            <button
              className="generate-schedule-btn"
              onClick={undefined}
>
              Generate schedule
</button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "There are no unscheduledEvents",
            },
            "ref": null,
            "rendered": "There are no unscheduledEvents",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Would you like to fill all unscheduled events?",
            },
            "ref": null,
            "rendered": "Would you like to fill all unscheduled events?",
            "type": "h4",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Generate schedule",
              "className": "generate-schedule-btn",
              "onClick": undefined,
            },
            "ref": null,
            "rendered": "Generate schedule",
            "type": "button",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "class",
        "props": Object {
          "admin": undefined,
          "deleteFromSchedule": undefined,
          "editSchedule": undefined,
          "event": Object {
            "ass_bar_manager": true,
            "bar_manager": true,
            "barbacks": 1,
            "bartenders": 1,
            "date": "Jul 20, 2018",
            "event_id": 3,
            "name": "Billy Prince Billy",
            "staff": Array [
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Bar Manager",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Assistant Bar Manager",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Bartender",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Barback",
                "staff_id": null,
              },
            ],
          },
          "staff": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "class",
        "props": Object {
          "admin": undefined,
          "deleteFromSchedule": undefined,
          "editSchedule": undefined,
          "event": Object {
            "ass_bar_manager": true,
            "bar_manager": true,
            "barbacks": 1,
            "bartenders": 1,
            "date": "Jul 20, 2018",
            "event_id": 4,
            "name": "Not Billy Prince Billy",
            "staff": Array [
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Bar Manager",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Assistant Bar Manager",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Bartender",
                "staff_id": null,
              },
              Object {
                "event_id": 3,
                "name": "Staff Needed",
                "role": "Barback",
                "staff_id": null,
              },
            ],
          },
          "staff": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <h4>
                        There are no unscheduledEvents
            </h4>
            <h4>
                        Would you like to fill all unscheduled events?
            </h4>
            <button
                        className="generate-schedule-btn"
                        onClick={undefined}
            >
                        Generate schedule
            </button>
</div>,
          Array [
            <Schedule
              admin={undefined}
              deleteFromSchedule={undefined}
              editSchedule={undefined}
              event={
                            Object {
                                          "ass_bar_manager": true,
                                          "bar_manager": true,
                                          "barbacks": 1,
                                          "bartenders": 1,
                                          "date": "Jul 20, 2018",
                                          "event_id": 3,
                                          "name": "Billy Prince Billy",
                                          "staff": Array [
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Bar Manager",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Assistant Bar Manager",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Bartender",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Barback",
                                              "staff_id": null,
                                            },
                                          ],
                                        }
              }
              staff={undefined}
/>,
            <Schedule
              admin={undefined}
              deleteFromSchedule={undefined}
              editSchedule={undefined}
              event={
                            Object {
                                          "ass_bar_manager": true,
                                          "bar_manager": true,
                                          "barbacks": 1,
                                          "bartenders": 1,
                                          "date": "Jul 20, 2018",
                                          "event_id": 4,
                                          "name": "Not Billy Prince Billy",
                                          "staff": Array [
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Bar Manager",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Assistant Bar Manager",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Bartender",
                                              "staff_id": null,
                                            },
                                            Object {
                                              "event_id": 3,
                                              "name": "Staff Needed",
                                              "role": "Barback",
                                              "staff_id": null,
                                            },
                                          ],
                                        }
              }
              staff={undefined}
/>,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h4>
                There are no unscheduledEvents
</h4>,
              <h4>
                Would you like to fill all unscheduled events?
</h4>,
              <button
                className="generate-schedule-btn"
                onClick={undefined}
>
                Generate schedule
</button>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "There are no unscheduledEvents",
              },
              "ref": null,
              "rendered": "There are no unscheduledEvents",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Would you like to fill all unscheduled events?",
              },
              "ref": null,
              "rendered": "Would you like to fill all unscheduled events?",
              "type": "h4",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Generate schedule",
                "className": "generate-schedule-btn",
                "onClick": undefined,
              },
              "ref": null,
              "rendered": "Generate schedule",
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "class",
          "props": Object {
            "admin": undefined,
            "deleteFromSchedule": undefined,
            "editSchedule": undefined,
            "event": Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 3,
              "name": "Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
            "staff": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "class",
          "props": Object {
            "admin": undefined,
            "deleteFromSchedule": undefined,
            "editSchedule": undefined,
            "event": Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 4,
              "name": "Not Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
            "staff": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
